# arzoom-follow-obs

./: .gitignore  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  SUPPORT.md  VALIDATION.md  build-local-windows.bat  buildspec.json  package-existing-build.bat  rebuild-runtime-hotfix.bat  untrack-ignored-files.bat
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: build-windows.yml  pages.yml  release.yml
data/effects/: arzoom.effect
data/locale/: en-US.ini  id-ID.ini
docs/: 404.html  ARCHITECTURE.md  TESTING.md  guide.html  index.html  privacy.html  robots.txt  sitemap.xml  styles.css  troubleshooting.html
packaging/windows/: arzoom.iss
scripts/: build-local-windows.ps1  check-windows-build-env.ps1  package-existing-build.ps1  package-windows.ps1  untrack-ignored-files.ps1
src/: arzoom-filter.cpp  arzoom-math.hpp  plugin-main.cpp
tests/: arzoom-math-test.cpp
